# llmwiki-serve

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adapter_protocol.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml  security_contact_request.yml  usage_question.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pr-review-guide.yml  publish.yml
docs/: architecture.md  openapi.json  release.md
docs/decisions/: 2026-07-17-producer-manifest-freshness-boundary.md  2026-07-17-serve-graph-neighborhood-boundary.md  2026-07-20-default-serve-io-logging.md  2026-07-22-redis-projection-store-derived-cache-boundary.md  2026-07-23-mcp-scoped-metadata-and-default-limits.md
docs/investigations/: chat-agent-bridge-query-e2e.md
docs/research/: 2026-07-17-freshness-invalidation-core-libraries.md  2026-07-17-hadoop-spark-freshness-patterns.md  redis-projection-store-adoption-plan.md
docs/worklogs/: 2026-07-23-mcp-metadata-default-limits.md
examples/: README.md
examples/sample-wiki/: artwork-review.md  draft-note.md  hot.md  index.md  requester-return.md
scripts/: __init__.py  candidate_sample_artifacts.py  check_third_party_notices.py  ckg_neighborhood_perf.py  export_openapi.py  freshness_strategy_probe.py  generate_candidate_samples.py  release_smoke.py  upstream_candidate_smoke.py
specs/ax-knowledge-warehouse-rubrics/: plan.md  spec.md  tasks.md  tests.md
specs/ckg-graph-neighborhood/: plan.md  spec.md  tasks.md  tests.md
specs/default-io-logging/: plan.md  spec.md  tasks.md  tests.md
specs/freshness-loop-test-matrix/: plan.md  spec.md  tasks.md  tests.md
specs/mcp-manifest-scoped-metadata/: plan.md  spec.md  tasks.md  tests.md
specs/operator-default-limits/: plan.md  spec.md  tasks.md  tests.md
specs/producer-manifest-freshness/: plan.md  spec.md  tasks.md  tests.md
specs/projection-freshness-diagnostics/: plan.md  spec.md  tasks.md  tests.md
specs/redis-projection-store/: plan.md  spec.md  tasks.md  tests.md
src/llmwiki_serve/: __init__.py  adapters.py  api.py  cli.py  io_logging.py  models.py  parser.py  projection.py  projection_store.py  search.py  service.py
tests/: test_adapters.py  test_candidate_samples.py  test_connection_loop_matrix.py  test_freshness_loop_matrix.py  test_governance_loop_matrix.py  test_graph_traversal_loop_matrix.py  test_io_logging.py  test_public_api.py  test_redis_projection_store_integration.py  test_service.py  test_upstream_candidate_smoke.py
tests/fixtures/dendron-workspace/: dendron.yml
(+30 files in other folders)
