[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "llmwiki-serve"
version = "0.1.0"
description = "Serve LLMWiki Markdown folders over HTTP, MCP-style JSON-RPC, MCP Streamable HTTP, and opt-in A2A-style message surfaces."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "LLMWiki Serve contributors" }]
keywords = ["llmwiki", "mcp", "a2a", "knowledge-graph", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.139.0",
  "mcp>=1.28.1,<2",
  "pydantic>=2.11",
  "pyyaml>=6.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.6",
  "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://knowledge-bridge-labs.github.io/llmwiki-docs/"
Documentation = "https://knowledge-bridge-labs.github.io/llmwiki-docs/"
Repository = "https://github.com/knowledge-bridge-labs/llmwiki-serve"
Issues = "https://github.com/knowledge-bridge-labs/llmwiki-serve/issues"
Changelog = "https://github.com/knowledge-bridge-labs/llmwiki-serve/blob/main/CHANGELOG.md"

[project.scripts]
llmwiki-serve = "llmwiki_serve.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llmwiki_serve"]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/README.md",
  "/SECURITY.md",
  "/SUPPORT.md",
  "/THIRD_PARTY_NOTICES.md",
  "/docs",
  "/examples",
  "/pyproject.toml",
  "/scripts",
  "/src",
  "/tests",
  "/uv.lock",
]
exclude = [
  "/.github",
  "/.mypy_cache",
  "/.nox",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.tox",
  "/.venv",
  "/build",
  "/dist",
  "/htmlcov",
  "/**/.DS_Store",
  "/**/.env",
  "/**/.env.*",
  "/**/*.py[cod]",
  "/**/__pycache__",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["llmwiki_serve"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
]
